--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -15,7 +15,7 @@
 # Review
 # Carouserl
 # Tabs
-# Features list
+# Features
 # Fancybox
 # Footer
 # Cookiebanner
@@ -776,25 +776,39 @@ a.card:hover {
 /*--------------------------------------------------------------
 # Features list
 --------------------------------------------------------------*/
-.features-list {
+.features {
+    display: grid;
+    gap: 20px 30px;
+}
+.features__list {
     border-radius: var(--radius);
     border: 1px solid var(--border);
 }
-.features-list li {
+.features__list li {
     display: grid;
     gap: 10px;
     padding: 24px;
     grid-template-columns: 20px 1fr;
 }
-.features-list li:nth-child(n+2) {
+.features__list li:nth-child(n+2) {
     border-top: 1px solid var(--border);
 }
-.features-list p {
+.features__list p {
     grid-column: 2;
     margin: 0;
 }
-.features-list img {
+.features__list img {
     grid-row: 1/3;
+    margin-top: 2px;
+}
+@media (min-width: 42.0625em) {
+    .features {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .features > * {
+        max-width: 460px;
+        margin: 0 auto;
+    }
 }
 /*--------------------------------------------------------------
 # Fancybox
