--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -898,9 +898,6 @@ footer p {
 /*--------------------------------------------------------------
 # Topbar
 --------------------------------------------------------------*/
-.topbar {
-    background: radial-gradient(50% 50% at 50% 50%, #86383F 0%, #652A48 50%, #431C52 100%);
-}
 .topbar__wrapper {
     display: flex;
     flex-wrap: wrap;
@@ -909,4 +906,23 @@ footer p {
 }
 .topbar__content {
     margin-right: 10px;
+}
+
+.topbar img {
+    animation: shake .5s infinite ease-in-out;
+}
+
+@keyframes shake {
+    0% {
+        transform: rotate(5deg) translateY(-2px);
+    }
+    35% {
+        transform: rotate(0deg);
+    }
+    63% {
+        transform: rotate(-5deg) translateY(-2px);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
 }
