--- a/assets/css/rate.css
+++ b/assets/css/rate.css
@@ -5,15 +5,18 @@
 	border-left-color: #00818a;
 }
 
-#woo-store-vacation-dismiss-rate .dashicons-star-filled {
+#woo-store-vacation-dismiss-rate .dashicons {
 	color: #c62a88;
 	vertical-align: sub;
 }
 
-#woo-store-vacation-dismiss-rate .button-primary {
-	margin-top: 10px;
-}
-
 #woo-store-vacation-dismiss-rate .button-link {
 	margin-left: 10px;
+}
+
+#woo-store-vacation-dismiss-rate .button-primary,
+#woo-store-vacation-dismiss-rate .button-primary:focus,
+#woo-store-vacation-dismiss-rate .button-primary:active {
+	background-color: #c62a88;
+	border-color: #c62a88;
 }
