fix: Incorrect graphic file path

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -14,7 +14,7 @@
 }
 
 .woo-store-vacation-get-pro-logo {
-	background-image: url(../../img/logo.svg);
+	background-image: url(../img/logo.svg);
 	background-size: contain;
 	margin: -40px auto 0;
 	height: 85px;
