--- a/assets/css/rate.css
+++ b/assets/css/rate.css
@@ -1,4 +1,4 @@
-/* Upsell styles.
+/* Rate styles.
  * The following will apply all rate (review on wp.org) plugin-wide.
 ----------------------------------------------------------------------------- */
 #woo-store-vacation-dismiss-rate {
