--- a/docs/style.css
+++ b/docs/style.css
@@ -60,7 +60,7 @@ h2 {
 
 h3 {
 	font-weight: var(--font-weight--bold);
-	font-size: 18px;
+	font-size: 17px;
 	line-height: 1.5;
 	margin-top: 0;
 	margin-bottom: 20px;
@@ -70,6 +70,10 @@ a {
 	color: var(--color--primary);
 	text-decoration: none;
 	transition: color 0.3s ease, opacity 0.3s ease;
+}
+
+a:not(.button):hover {
+	color: var(--color--light);
 }
 
 a:focus-visible {
@@ -90,15 +94,12 @@ strong {
 }
 
 code {
+	background-color: var(--color--tile);
+	color: var(--color--secondary);
 	font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+	padding: 4px 6px;
 	tab-size: 4;
 	white-space: pre;
-	padding: 4px 6px;
-
-	:not(pre) > & {
-		background-color: var(--color--tile);
-		color: var(--color--secondary);
-	}
 }
 
 /* width  */
@@ -140,12 +141,8 @@ code {
 	max-width: 45%;
 }
 
-.header a {
+.header a:not(:hover) {
 	color: var(--color--tile);
-}
-
-.header a:hover {
-	color: var(--color--light);
 }
 
 /* Button */
@@ -257,6 +254,15 @@ ol li {
 	margin-bottom: 10px;
 }
 
+menu ul {
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+	margin-bottom: 0;
+	margin-top: 8px;
+	padding-left: 20px;
+}
+
 /* Intro  */
 .intro {
 	background-color: var(--color--tile);
@@ -346,30 +352,40 @@ article {
 .widget menu {
 	display: flex;
 	flex-direction: column;
-	padding: 20px;
+	gap: 16px;
 	margin: 0;
-	gap: 10px;
+	max-height: calc(100vh - 100px);
+	overflow-y: auto;
+	padding: 20px;
 }
 
 .widget li {
 	list-style: none;
 }
 
-.widget a {
+.widget a:not(:hover) {
 	color: var(--color--dark);
 }
 
-.widget a:hover {
-	color: var(--color--light);
-}
-
 .table-of-content a:not(.active) {
+	display: block;
 	padding-right: 10px;
 }
 
-.table-of-content .active {
+.widget.table-of-content a.active {
 	color: var(--color--primary);
 	font-weight: var(--font-weight--bold);
+}
+
+.table-of-content::after {
+	background: linear-gradient( 180deg, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
+	bottom: 0;
+	content: "";
+	height: 25px;
+	left: 0;
+	pointer-events: none;
+	position: absolute;
+	width: 100%;
 }
 
 .requirements {
@@ -407,9 +423,6 @@ article {
 	gap: 20px;
 	justify-content: space-between;
 	margin-bottom: 30px;
-}
-
-.promotion-header p {
 }
 
 @media (min-width: 1050px) {
@@ -464,7 +477,7 @@ article {
 		padding: 20px;
 		position: fixed;
 		right: 3vw;
-		transition: opacity 0.2s ease, bottom 0.4 ease;
+		transition: opacity 0.2s ease, bottom 0.4s ease;
 		visibility: hidden;
 		width: min(300px, 94vw);
 		z-index: 20;
