--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -109,6 +109,28 @@
 	margin-inline-start: 5px;
 }
 
+.woo-store-vacation-start-datepicker.hasDatepicker,
+.woo-store-vacation-end-datepicker.hasDatepicker {
+	background: var(--wc-primary-text, #fff);
+}
+
+.ui-datepicker .highlight a,
+.ui-datepicker .highlight span {
+	background: var(--wc-blue, #2ea2cc);
+	border-color: var(--wc-blue, #2ea2cc);
+	color: var(--wc-primary-text, #fff);
+}
+
+.ui-datepicker .highlight.ui-datepicker-today a,
+.ui-datepicker .highlight.ui-datepicker-today span {
+	border-color: var(--wc-orange, #ffba00);
+	box-shadow: inset 0 0 0 1px var(--wc-orange, #ffba00);
+}
+
+.woo-store-vacation-page .end-date-error {
+	background-color: #ffafaf;
+}
+
 @media (min-width: 1200px) {
 
 	.woo-store-vacation-page .form-table,
