--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -133,33 +133,27 @@
 	background-color: #ffafaf;
 }
 
-.woocommerce_page_wc-settings-woo-store-vacation .woocommerce #mainform {
-	display: table;
-	padding-bottom: 65px;
+.woocommerce_page_wc-settings-woo-store-vacation #wpfooter {
+	position: relative;
 }
 
-.woo-store-vacation-page #message {
-	clear: both;
-}
-
-.woo-store-vacation-page  .woo-connect-notice {
-	display: grid;
+.woo-store-vacation-page #mainform,
+.woo-store-vacation-page .notice {
+	box-sizing: border-box;
+	float: left;
+	width: 100%;
 }
 
 @media (min-width: 1200px) {
 
-	#woo-store-vacation-general-description,
-	.woo-store-vacation-page-sidebar + h2,
 	.woo-store-vacation-page .form-table,
 	.woo-store-vacation-page .submit {
 		clear: left;
-		display: table-cell;
 		float: left;
 		width: calc(100% - 320px);
 	}
 
 	.woo-store-vacation-page-sidebar {
-		display: table-cell;
 		float: right;
 		margin-left: 20px;
 		width: 300px;
@@ -174,9 +168,8 @@
 
 @media (max-width: 1199px) {
 
-	.woo-store-vacation-page:not(.woocommerce_page_wc-settings-woo-store-vacation) #mainform {
+	.woo-store-vacation-page #mainform {
 		display: table;
-		width: 100%;
 	}
 
 	.woo-store-vacation-page .woocommerce nav.woo-nav-tab-wrapper {
